1.3.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #15987: Font size estimation in Haru driver broken.
- Implemented: Directive contents reparsing helper method.
- Fixed #15973: Issues with re-parsing parts of directives.
- Implemented #15218: Add support for PDF compression


1.3 - Monday 21 December 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #15943: ODT list style extraction does not work for nested lists.
- Fixed #15944: ODT literal layout paragraphs not detected correctly.
- Fixed #15945: RST generator issue with link/footnote combination
- Major performance improvements in RST parsing


1.3rc1 - Monday 07 December 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #15905: Make rst->docbook visitor configuratble, just like rst->xhtml
- Fixed #15904: 'ezcDocumentRstXhtmlBodyVisitor' renders field lists above
  titles unlike docutils
- Fixed #15912: Titles with UTF-8 chracters throw a notice.
- Fixed #15914: Reference names with quotes in it think their name is id\_.
- Fixed #15913: References with a : or | do not work properly.
- Fixed #15915: Forward-dispatching of empty named reference fails, if name
  contains spaces.


1.3beta1 - Monday 23 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented additional element conversions from DocBook to ODT.
- Implemented filtering based on styles while converting from ODT to DocBook.


1.3alpha2 - Monday 09 November 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented #15197: Implement renderer for table elements.
- Implemented #15217: Write document metadata in PDFs.
- Implemented #15220: Implement renderer for blockquote elements.
- Implemented #15221: Implement support for RTL languages in PDF renderer.